examples/errors/overlap-categories.sem
category Overlap = Syntax
category Overlap = Bool

